# AMICE

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  amice.cpp  config.h  oled_main.cpp  oled_main.h
main/api/: api_context.cpp  api_context.h  api_server.h  bus_status_handler.cpp  bus_status_handler.h  can_consecutive_data_handler.h  can_data_handler.h  ping_handler.cpp  ping_handler.h
main/api/can_data/: era_can_data.h
main/application/: can_events.h  can_reader_task.cpp  can_reader_task.h  can_store_task.cpp  can_store_task.h  status_indicator_task.cpp  status_indicator_task.h  status_monitor_task.cpp  status_monitor_task.h
main/can/: can_buffer.cpp  can_buffer.h  can_bus_status.cpp  can_bus_status.h  can_frame.cpp  can_frame.h  can_store.cpp  can_store.h  slcan_interface.cpp  slcan_interface.h
main/canspec/era/: era_canspec.h  era_matcher.cpp  era_matcher.h
main/core/: event_group.h  mutex.cpp  mutex.h  task.cpp  task.h  timer.cpp  timer.h  utils.cpp  utils.h
main/http_server/: embedded_file_handler.h  server.h
main/io/: gpi.cpp  gpi.h  gpo.cpp  gpo.h  uart.cpp  uart.h
main/ssd1306/: ssd1306_i2c.c
main/wifi/: access_point.cpp  access_point.h  station.cpp  station.h
